--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "react": "16.2.0",
     "react-native": "0.52.2"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-native": "4.0.0",
     "eslint-config-rallycoding": "^3.2.0",
     "jest": "22.1.4",
