--- a/App5/package.json
+++ b/App5/package.json
@@ -12,7 +12,10 @@
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-native": "4.0.0",
+    "eslint-config-rallycoding": "^3.2.0",
     "jest": "22.1.4",
     "react-test-renderer": "16.2.0"
   },
