--- a/App5/package.json
+++ b/App5/package.json
@@ -7,8 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "prop-types": "^15.6.0",
     "react": "16.2.0",
-    "react-native": "0.52.2"
+    "react-native": "0.52.2",
+    "react-native-deprecated-custom-components": "^0.1.1"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
