--- a/App5/package.json
+++ b/App5/package.json
@@ -10,7 +10,7 @@
     "prop-types": "^15.6.0",
     "react": "16.2.0",
     "react-native": "0.52.2",
-    "react-native-deprecated-custom-components": "^0.1.1"
+    "react-native-deprecated-custom-components": "git+https://github.com/facebookarchive/react-native-custom-components.git"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
